--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
-    <string name="app_name">ClearScore</string>
+    <string name="app_name">Clear Score</string>
     <string name="actual_score">325</string>
     <string name="max_score">700</string>
     <string name="slash"> / </string>
+    <string name="there_was_an_unexpected_error">There was an unexpected error</string>
+    <string name="please_wait_calculating_your_score">PLEASE WAIT\nCALCULATING YOUR SCORE …</string>
+    <string name="refresh">RETRY</string>
 </resources>
